--- a/sass/site/header/_header-common.scss
+++ b/sass/site/header/_header-common.scss
@@ -21,6 +21,11 @@
  */
 .main-header-container {
     position: relative;
+    justify-content: space-between;
+}
+
+.ast-header-custom-item-outside .site-branding {
+    flex: 1;
 }
 
 .main-header-bar-wrap {
