--- a/sass/site/navigation/_navigation.scss
+++ b/sass/site/navigation/_navigation.scss
@@ -83,14 +83,6 @@
 	display: none;
 }
 
-.main-header-bar-navigation {
-	flex: 1;
-}
-
-.ast-main-header-bar-alignment {
-	flex: 1;
-}
-
 /* Responsive Screen */
 .ast-header-break-point {
 
